--- a/vignettes/beginner_vicmap.Rmd
+++ b/vignettes/beginner_vicmap.Rmd
@@ -34,7 +34,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup, include=FALSE, echo=FALSE,eval = all(geoserver_connected, !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
+```{r, include=FALSE, echo=FALSE, eval = all(geoserver_connected, !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 # LIBRARIES -----
 library(VicmapR)
 library(sf)
