--- a/vignettes/query_vicmap.Rmd
+++ b/vignettes/query_vicmap.Rmd
@@ -4,7 +4,7 @@ output: rmarkdown::html_vignette
 date: "`r Sys.Date()`"
 vignette: >
   %\VignetteIndexEntry{How to Query Vicmap Data}
-  %\VignetteEngine{knitr::rmarkdown_notangle}
+  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
