--- a/vignettes/beginner_vicmap.Rmd
+++ b/vignettes/beginner_vicmap.Rmd
@@ -77,7 +77,7 @@ VicmapR uses *lazy evaluation*,  in which we query but do not collect the data f
 
 <!-- Load swoops for reporting -->
 ```{r, echo=FALSE, include=FALSE, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-swoops <- vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") %>% collect() 
+swoops <- vicmap_query(layer = "ptv_metro_tram_route") %>% collect() 
 ```
 
 To demonstrate VicmapR's features, we will download and explore a dataset from the Vicmap catalogue.
@@ -93,7 +93,7 @@ First, we need to search for the dataset. We can view all layers, or do a keywor
 all_layers <- listLayers() 
 
 #Case insensitive keyword search
-search <- listLayers(pattern = "swoop", ignore.case = T) 
+search <- listLayers(pattern = "tram", ignore.case = T) 
 
 ```
 
@@ -110,7 +110,7 @@ Once we have the name of the Vicmap dataset we would like to download, in this c
 If we are still not sure from the name and description that this is the right dataset, we can look at the Vicmap Promise to get a snippet of the dataset contents. 
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") 
+vicmap_query(layer = "ptv_metro_tram_route") 
 ```
 
 We can see that the dataset contains, swoop date, location and species. At a glance this data should be adequate to start analysing the spatial distribution of bird swoops. 
@@ -122,7 +122,7 @@ The summary also shows that there are `r try(nrow(swoops))` rows in this dataset
 Using lazy evaluation, we can use pipes to filter and subset the data, so that we only collect the desired subset. For example, let's just look at the first 10 rows.
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-query <- vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") %>% 
+query <- vicmap_query(layer = "ptv_metro_tram_route") %>% 
   head(10) %>% collect()
 
 query
@@ -136,10 +136,10 @@ Now let's only look at swoops that occurred in 2021, where STATUS is HISTORY2021
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 library(dplyr)
 
-swoops_2021 <- vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") %>% 
-  filter(SWOOP_DATE > "2020-12-31z") %>% 
-  filter(STATUS == "HISTORY2021") %>% 
-  select(SWOOP_DATE, NO_OF_BIRDS, SPECIES, COMMENTS) %>%
+swoops_2021 <- vicmap_query(layer = "ptv_metro_tram_route") %>% 
+  filter(operator_name == "Yarra Trams") %>% 
+  filter(num_of_stops > 5) %>% 
+  select(id, route_id, route_short_name, trip_headsign, operator_name, route_km) %>%
   collect()
 
 swoops_2021 %>% head(5) %>% 
@@ -175,7 +175,7 @@ library(leaflet)
 swoops_2021 %>%
   leaflet() %>% #plot a leaflet object
   addTiles() %>% #add a basemap (default is OpenStreetMap)
-  addMarkers(popup = swoops_2021$COMMENTS) #add geom points the marker label (automatically obtained from geom column)
+  addPolylines(popup = swoops_2021$trip_headsign) #add geom points the marker label (automatically obtained from geom column)
 
 ```
 
@@ -185,12 +185,12 @@ There are a lot of points in this dataset and leaflet's default marker appears v
 swoops_2021 %>%
   leaflet() %>%
   addTiles() %>%
-  addCircleMarkers(
-    radius = 6,
-    color = "green",
-    stroke = FALSE, #removes outline
-    fillOpacity = 0.6,
-    popup = swoops_2021$COMMENTS
+  addPolylines(
+    color = "green", 
+    weight = 2,
+    stroke = 0.5, #removes outline
+    fillOpacity = 0.8,
+    popup = swoops_2021$trip_headsign
   )
 ```
 
@@ -204,19 +204,19 @@ We can also easily conditionally format our markers and basemaps in leaflet. Let
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 
 # Create a palette
-pal <- colorFactor("Accent", levels = swoops_2021$SPECIES) #define a colour palette
+pal <- colorFactor("Accent", levels = swoops_2021$trip_headsign) #define a colour palette
 
 swoops_2021 %>%
   leaflet() %>%
   addProviderTiles(providers$CartoDB.Positron) %>% #add third party base map
-  addCircleMarkers(
-    radius = ~NO_OF_BIRDS,
-    color = ~pal(SPECIES),
-    stroke = FALSE,
-    fillOpacity = 0.7,
-    popup = paste0("<b>COMMENT: </b>", swoops_2021$COMMENTS, "<br>", #format the popup with html tags
-                   "<b>NUM. BIRDS: </b>", swoops_2021$NO_OF_BIRDS, "<br>",
-                   "<b>SPECIES: </b>", swoops_2021$SPECIES)
+  addPolylines(
+    color = ~pal(trip_headsign),
+    weight = 2,
+    stroke = 0.5, #removes outline
+    fillOpacity = 0.8,
+    popup = paste0("<b>Route No.: </b>", swoops_2021$route_short_name, "<br>", #format the popup with html tags
+                   "<b>Route Name: </b>", swoops_2021$trip_headsign, "<br>",
+                   "<b>Distance (km): </b>", swoops_2021$route_km)
   )
 ```
 
@@ -232,10 +232,11 @@ To do this we can use `sf::st_intersection()`. Before performing any spatial ope
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 # Suburb polygon for Darebin
-darebin <- vicmap_query(layer = "datavic:VMADMIN_LGA_POLYGON") %>%
-  select(LGA_NAME) %>% 
-  filter(LGA_NAME == "DAREBIN") %>%
-  collect()
+darebin <- vicmap_query(layer = "lga_polygon") %>%
+  select(lga_name) %>% 
+  filter(lga_name == "DAREBIN") %>%
+  collect() %>%
+  st_make_valid()
 
 # Check crs for each spatial dataset
 sf::st_crs(darebin) == sf::st_crs(swoops_2021)
@@ -295,13 +296,13 @@ route_line <- sf::st_read(system.file("shapes/cycle_route.geojson", package="Vic
   sf::st_transform(4283)
 
 #Add buffer to route - we need to convert to m to do this (same as before)
-route_m <- st_transform(route_line, "+proj=utm +zone=55") %>% st_buffer(300) #300m buffer
+route_m <- st_transform(route_line, "+proj=utm +zone=55")
 swoops_m <- st_transform(swoops_2021, "+proj=utm +zone=55") # convert to same crs for st_intersection
 
 swoops_en_route <- st_intersection(route_m,swoops_m)
 
 # Recorded swoops within 300m of the route
-mapview(swoops_en_route) + mapview(route_line)
+mapview(swoops_en_route, col.regions = "Black") + mapview(route_line)
 
 ```
 
@@ -315,18 +316,9 @@ These geometric filters allow us to perform basic spatial manipulation while ret
 Let's revisit our examples above. To get the swoops only in Darebin we can filter with `INTERSECTS()`.
 
 ```{r, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-# Suburb polygon for Darebin
-darebin <- vicmap_query(layer = "datavic:VMADMIN_LGA_POLYGON") %>%
-  select(LGA_NAME) %>% 
-  filter(LGA_NAME == "DAREBIN") %>%
-  collect()
-
 # Swoops in Darebin
-darebin_2021 <- vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") %>%
-  filter(SWOOP_DATE > "2020-12-31z") %>%
-  filter(STATUS == "HISTORY2021") %>%
+darebin_2021 <- vicmap_query(layer = "ptv_metro_tram_route") %>%
   filter(INTERSECTS(darebin)) %>%
-  select(SWOOP_DATE, NO_OF_BIRDS, SPECIES, COMMENTS) %>%
   collect()
 
 mapview(darebin_2021) + mapview(darebin, alpha.regions = 0.3, col.regions = "orange")
@@ -338,10 +330,7 @@ Now let's try the 10km radius.
 ```{r,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 
 # Swoops in 10k
-radius_2021 <- vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") %>%
-  filter(SWOOP_DATE > "2020-12-31z") %>%
-  filter(STATUS == "HISTORY2021") %>%
-  select(SWOOP_DATE, NO_OF_BIRDS, SPECIES, COMMENTS) %>%
+radius_2021 <- vicmap_query(layer = "ptv_metro_tram_route") %>%
   filter(INTERSECTS(home_radius)) %>%
   collect()
 
@@ -359,18 +348,17 @@ route_line <- sf::st_read(system.file("shapes/cycle_route.geojson", package="Vic
 # Condense line object
 route_poly <- route_line %>% 
   sf::st_transform(3111) %>% 
-  sf::st_buffer(300) %>% 
+  sf::st_buffer(30) %>% 
   sf::st_cast("POLYGON") %>% 
   sf::st_transform(4283)
 
-swoop <- VicmapR::vicmap_query("datavic:FLORAFUANA1_SWOOPING_BIRD") %>%
-  filter(SWOOP_DATE > "2020-12-31z") %>%
-  filter(STATUS == "HISTORY2021") %>%
-  select(SWOOP_DATE, NO_OF_BIRDS, SPECIES, COMMENTS) %>% 
-  filter(INTERSECTS(route_poly)) %>% collect()
+swoop <- vicmap_query(layer = "ptv_metro_tram_route") %>%
+  filter(INTERSECTS(route_poly)) %>% 
+  collect() %>%
+  st_intersection(route_poly)
 
 
-mapview::mapview(route_poly) + mapview::mapview(swoop)
+mapview::mapview(route_poly) + mapview::mapview(swoop, color = "red", lwd = 5)
 
 
 ```
